crates/ty_python_semantic/resources/mdtest/snapshots/new_types.md_-_NewType_-_The_assigned_name_sh…_(124f70124aebd214).snap
---
source: crates/ty_test/src/lib.rs
expression: snapshot
---

---
mdtest name: new_types.md - NewType - The assigned name should match the constructor name
mdtest path: crates/ty_python_semantic/resources/mdtest/annotations/new_types.md
---

# Python source files

## mdtest_snippet.py

```
 1 | from typing_extensions import NewType
 2 | from ty_extensions import is_subtype_of
 3 | 
 4 | # error: [mismatched-type-name]
 5 | UserId = NewType("Id", int)
 6 | reveal_type(UserId)  # revealed: <NewType pseudo-class 'Id'>
 7 | reveal_type(is_subtype_of(UserId, int))  # revealed: ConstraintSet[Literal[True]]
 8 | 
 9 | Id = int
10 | # error: [mismatched-type-name]
11 | UsesExistingId = NewType("Id", "Id")
12 | UsesExistingId(1)
```

# Diagnostics

```
warning[mismatched-type-name]: The name passed to `NewType` must match the variable it is assigned to
 --> src/mdtest_snippet.py:5:18
  |
4 | # error: [mismatched-type-name]
5 | UserId = NewType("Id", int)
  |                  ^^^^ Expected "UserId", got "Id"
6 | reveal_type(UserId)  # revealed: <NewType pseudo-class 'Id'>
7 | reveal_type(is_subtype_of(UserId, int))  # revealed: ConstraintSet[Literal[True]]
  |

```

```
warning[mismatched-type-name]: The name passed to `NewType` must match the variable it is assigned to
  --> src/mdtest_snippet.py:11:26
   |
 9 | Id = int
10 | # error: [mismatched-type-name]
11 | UsesExistingId = NewType("Id", "Id")
   |                          ^^^^ Expected "UsesExistingId", got "Id"
12 | UsesExistingId(1)
   |

```
